Fixed Nav Bar and Aligned Footer

--- a/index.css
+++ b/index.css
@@ -2,6 +2,28 @@ header {
     background-color: #333;
     text-align: center;
 }
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+nav ul li {
+    padding-left: 30px;
+    display: inline;
+    margin-right: 20px;
+    font-size: 20px;
+}
+nav ul li a {
+    text-decoration: none;
+    color: black;
+    padding: 14px 16px;
+    transition: color 0.5s;
+}
+nav ul li a:hover {
+    color: #02D8E9;
+    transition: color 0.5s;
+}
 body h1,h2 {
     text-align: center;
     background-color: #333;
@@ -10,4 +32,11 @@ body h1,h2 {
 body {
     background-color: #333;
     color: #fff;
+}
+footer {
+    background-color: #333;
+    text-align: center;
+    margin-bottom: 5px;
+    color: #fff;
+    position: relative;
 }
